--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -25,7 +25,12 @@
         <p>A mixture of espresso, steamed milk and foam.</p>
 
         <h2>Chai Tea, $1.85</h2>
-        <p>A spicy drink made with black tea, spices, milk and honey.</p>
-
+        <p>A spicy drink made with black tea, spices, 
+            milk and honey.
+        </p>
+            <a href="mission.html">Read about our mission</a>
+            <br>
+            Read the <a href="http://buzz.headfirstlabs.com">Caffeine Buzz</a>
+        </p>
     </body>
 </html>
